# zinc-t

./: .gitignore  CONTEXT.md  README.md  apirun.md  package-lock.json  package.json  run.js  tsconfig.json  vokex-api-reference.md  zinc-api-reference.md
example/: index.html  index.ts  package-lock.json  package.json  vite.config.ts
shell/: Cargo.toml
shell/src/: api.rs  app_config.rs  args_utils.rs  main.rs
src/: cli.ts  index.ts
src/runtime/: api.ts  index.ts
src/vite-plugin/: index.ts
