[package]
name = "zinc-shell"
version = "0.1.0"
edition = "2021"
description = "Lightweight native shell for the 'zinc' desktop framework"

[dependencies]
wry = "0.55"
tao = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
mime_guess = "2"
hostname = "0.4"
dirs = "5"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_System_SystemInformation"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
